<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="blank"></string>
    <string name="app_name">DalyQuickView</string>
    <string name="action_settings">Settings</string>
    <string name="label1">Selected Asset</string>
    <string name="label2">Asset Search</string>
    <string name="label3">Serial Number</string>
    <string name="label4">Warranty End</string>
    <string name="label5">Contact</string>
    <string name="label7">Date Delivered</string>
    <string name="label8">Account Name</string>
    <string name="label9">View Asset Tickets</string>
    <string name="button">x</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="daly">Daly QuickView</string>
    <string name="version">Version 1.8</string>
    <string name="info1">Developed by</string>
    <string name="info2">Andrew P Ramsey</string>
    <string name="info3">Contact</string>
    <string name="info4">devops@daly.com</string>
	<string name="back">Back</string>
	<string name="daysleft">Days Left</string>
	<string name="authwelcome">Welcome to Daly QuickView</string>
	<string name="authmsg">Your installation must be authorized.</string>
	<string name="authmsg2">Please provide the info below to request access from Daly.</string>
	<string name="authmsg3">You will receive an email after your account is established.</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="email">E-Mail</string>
    <string name="phone1">Primary Phone</string>
    <string name="phone2">Mobile Phone</string>
    <string name="phone3">Alt Phone</string>
    <string name="contactinfo">Contact Info</string>
    <string name="address">Address</string>
    <string name="tasknumber">Task Number</string>
    <string name="taskname">Task Name</string>
	
</resources>
