<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:screenOrientation="portrait" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="235px"
        android:layout_height="107px"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/daly"
        android:scaleType="centerCrop"
        android:src="@drawable/daly_trans" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/daly"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#53CCCE"
        android:textSize="35sp"
        android:typeface="serif" />
    
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5sp"
         android:text="@string/version"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#EEEEEE"
         android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="monospace" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:layout_marginRight="60sp"
        android:text="@string/info1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#EEEEEE"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:text="@string/info2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#53CCCE"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:layout_marginRight="85sp"
        android:text="@string/info3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#EEEEEE"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5sp"
        android:text="@string/info4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#53CCCE"
        android:textColorLink="#53CCCE"
        android:autoLink="email"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:onClick="weAreDone"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:text="@string/back"
        android:textColor="#53CCCE"
        android:textSize="20sp" />

</LinearLayout>