<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait">

    <RelativeLayout
        android:id="@+id/relative_internal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:alpha="0.98"
            android:contentDescription="@string/daly"
            android:scaleType="fitEnd"
            android:src="@drawable/daly_trans" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:alpha="0.98"
            android:background="@color/dalytitle"
            android:contentDescription="@string/daly"
            android:onClick="infoActivity"
            android:scaleType="fitEnd"
            android:src="@drawable/info" />
    </RelativeLayout>
    
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/authwelcome"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="#53CFCE"
		        android:textSize="24sp"
		        android:textStyle="bold"
		        android:typeface="normal" />
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:text="@string/authmsg"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="18sp" />
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:text="@string/authmsg3"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="18sp" />
		
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="25dp"
		        android:text="@string/fname"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textColor="#53CFCE"
		        android:textStyle="bold" />
		
		    <EditText
		        android:id="@+id/editText1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:ems="10"
		        android:inputType="textPersonName"
		        android:textSize="20sp" >
		
		        <requestFocus />
		    </EditText>
		    
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:text="@string/lname"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textColor="#53CFCE"
		        android:textStyle="bold" />
		
		    <EditText
		        android:id="@+id/editText2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:ems="10"
		        android:inputType="textPersonName"
		        android:textSize="20sp" >
		    </EditText>
		    
		    <TextView
		        android:id="@+id/textView6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:text="@string/email"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textColor="#53CFCE"
		        android:textStyle="bold" />
		
		    <EditText
		        android:id="@+id/editText3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:ems="10"
		        android:inputType="textPersonName"
		        android:textSize="20sp" >
		    </EditText>
    
    </LinearLayout>
    
  </ScrollView>

</LinearLayout>