<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:screenOrientation="portrait" >
    
    <RelativeLayout
        android:id="@+id/relative_internal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:onClick="weAreDone"
            android:text="@string/back"
            android:textColor="#53CFCE"
            android:textStyle="bold" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/relative_internal2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:text="@string/contactinfo"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textColor="#53CFCE"
           android:textSize="30sp"
           android:textStyle="bold"
           android:typeface="normal" />
		
    </RelativeLayout>
    
    
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#53CCCE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:textColor="@color/infotext"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />
                
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#53CCCE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:textColor="@color/infotext"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#53CCCE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:textColor="@color/infotext"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/phone1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#53CCCE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:textColor="@color/infotext"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none" />
            
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="address"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#53CCCE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:onClick="address"
                android:textColor="@color/infotext" />
            
     </LinearLayout>
     
     </ScrollView>
    
    
    </LinearLayout>