<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relative_internal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/daly"
            android:scaleType="fitEnd"
            android:src="@drawable/daly_trans" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/dalytitle"
            android:contentDescription="@string/daly"
            android:onClick="infoActivity"
            android:scaleType="fitEnd"
            android:src="@drawable/info" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="44dp"
            android:layout_toRightOf="@+id/imageView1"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/label2"
                    android:textColor="#53CFCE"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:onClick="clearEntry"
                    android:text="@string/button"
                    android:textColor="#53CFCE"
                    android:textSize="20sp" />
            </RelativeLayout>
            
            <com.daly.daly.dalyquickview.AutoCompleteEditText
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:screenOrientation="portrait"
                android:textSize="20sp" >
                <requestFocus />
            </com.daly.daly.dalyquickview.AutoCompleteEditText>
            
            <!--<AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:screenOrientation="portrait"
                android:textSize="20sp" >

                <requestFocus />
            </AutoCompleteTextView>-->
			
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/label3"
                android:textColor="#53CFCE"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:textStyle="bold" />
                
            <com.daly.daly.dalyquickview.AutoCompleteEditText
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="2sp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:screenOrientation="portrait"
                android:textSize="20sp">
            	</com.daly.daly.dalyquickview.AutoCompleteEditText>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginTop="2dp"
                android:enabled="false"
                android:onClick="ticketsActivity"
                android:text="@string/label9"
                android:textColor="#444444"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="5dp"
                android:textColor="#53CFCE"
                android:text="@string/label8"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:textColor="@color/infotext"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:onClick="contactActivity"
                android:text="@string/label5"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#53CFCE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false"
                android:onClick="contactActivity"
                android:textColor="@color/infotext"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/LinearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/label7"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#53CFCE"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/label4"
                    android:textColor="#53CFCE"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/daysleft"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#53CFCE"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textColor="@color/infotext"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textColor="@color/infotext"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:gravity="top"
                    android:textColor="@color/infotext"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
